daveysocket/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daveysocket
spec:
  selector:
    matchLabels:
      app: daveysocket
  template:
    metadata:
      labels:
        app: daveysocket
    spec:
      containers:
      - name: daveysocket
        image: council-docker-dev.artifactory.metro.ad.selinc.com/daveysocket:0.3
        imagePullSecrets:
        - name: council
        ports:
        - containerPort: 8080
