daveysocket/templates/logic-executor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logicexecutor
spec:
  selector:
    matchLabels:
      app: logicexecutor
  template:
    metadata:
      labels:
        app: logicexecutor
    spec:
      containers:
      - name: logicexecutor
        image:  council-docker-dev.artifactory.metro.ad.selinc.com/logicexecutor:0.1
      imagePullSecrets:
      - name: council
