daveysocket/templates/nats-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagebus
spec:
  selector:
    matchLabels:
      app: messagebus
  template:
    metadata:
      labels:
        app: messagebus
    spec:
      containers:
      - name: messagebus
        image: sel-docker.artifactory.metro.ad.selinc.com/nats
        ports:
        - containerPort: 4222
