daveysocket/templates/nats-service.yml
apiVersion: v1
kind: Service
metadata:
  name: messagebus-nodeport-ip
spec:
  type: ClusterIP
  selector:
   
    app: messagebus
  ports:
  - port: 4222
    targetPort: 4222
