daveysocket/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: daveysocket-clusterip-ip
spec:
  type: ClusterIP
  selector:
    app: daveysocket
  ports:
  - port: 8080
    targetPort: 8080
