daveysocket/templates/services.yml
kind: Service
apiVersion: v1
metadata:
  name: daveysocket
spec:
  selector:
    app: daveysocket
  ports:
  - port: 8080
    targetPort: 30000
