daveysocket/templates/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - http: 
      paths: 
        - path: /
          backend:
            serviceName: daveysocket-cluster-ip #this will need to be changed to my actual service name 
            servicePort: 8080
        # - path: /api/
        #   backend:
        #     serviceName: service-cluster-ip-service
        #     servicePort: 5000
